--- a/content/manual/problems/quantum-gravity.mdx
+++ b/content/manual/problems/quantum-gravity.mdx
@@ -1,6 +1,6 @@
 # Quantum Gravity and Spacetime Structure
 
-**From a canonical spectral bridge with Osterwalder-Schrader positivity to the derivation of dimensionality, null structure, and the equivalence principle — all as consequences of closure admissibility under $\mathcal{L} = \Omega,\Delta,\partial(\mathcal{L})$.**
+**From a canonical spectral bridge with Osterwalder-Schrader positivity to the derivation of dimensionality, null structure, and the equivalence principle, all as consequences of closure admissibility under $\mathcal{L} = \Omega,\Delta,\partial(\mathcal{L})$.**
 
 ---
 
@@ -26,19 +26,19 @@
 
 ## 1. The Problem That Has Defeated Physics for a Century
 
-Quantum mechanics and general relativity are the two most successful theories in the history of science. Quantum field theory predicts the anomalous magnetic moment of the electron to twelve decimal places. General relativity predicts the precession of Mercury's orbit, the bending of light around galaxies, and the waveforms of gravitational radiation from colliding black holes — all confirmed with extraordinary precision.
+Quantum mechanics and general relativity are the two most successful theories in the history of science. Quantum field theory predicts the anomalous magnetic moment of the electron to twelve decimal places. General relativity predicts the precession of Mercury's orbit, the bending of light around galaxies, and the waveforms of gravitational radiation from colliding black holes all confirmed with extraordinary precision.
 
 These two theories are also structurally incompatible.
 
-Quantum field theory is formulated on a fixed background metric. It requires a linear Hilbert space with a rigid $L^2$ probability structure. General relativity, by contrast, is a background-independent theory of spacetime geometry whose dynamics follow from the Einstein-Hilbert action. The metric is not a fixed stage — it is a dynamical variable that curves and deforms in response to matter and energy.
+Quantum field theory is formulated on a fixed background metric. It requires a linear Hilbert space with a rigid $L^2$ probability structure. General relativity, by contrast, is a background-independent theory of spacetime geometry whose dynamics follow from the Einstein-Hilbert action. The metric is not a fixed stage, it's a dynamical variable that curves and deforms in response to matter and energy.
 
-The incompatibility is not merely aesthetic. Attempts to quantise gravity perturbatively produce non-renormalisable divergences — an infinite tower of counterterms that cannot be absorbed into a finite number of parameters. Attempts to import quantum principles directly into curved spacetime fail to produce a universal vacuum structure or a consistent treatment of vacuum energy. The cosmological constant problem — the $10^{120}$-fold discrepancy between quantum vacuum energy predictions and the observed near-flatness of spacetime — is the worst prediction in the history of physics.
+The incompatibility is not merely aesthetic. Attempts to quantise gravity perturbatively produce non-renormalisable divergences, an infinite tower of counterterms that cannot be absorbed into a finite number of parameters. Attempts to import quantum principles directly into curved spacetime fail to produce a universal vacuum structure or a consistent treatment of vacuum energy. The cosmological constant problem, the $10^{120}$-fold discrepancy between quantum vacuum energy predictions and the observed near-flatness of spacetime is the worst prediction in the history of physics.
 
-For a century, this impasse has defined the frontier of fundamental physics. String theory, loop quantum gravity, asymptotic safety, causal set theory, noncommutative geometry — all have contributed insights, none has achieved closure.
+For a century, this impasse has defined the frontier of fundamental physics. String theory, loop quantum gravity, asymptotic safety, causal set theory, noncommutative geometry all have contributed insights, none has achieved closure.
 
 The work presented here takes a fundamentally different approach. It does not attempt to quantise the metric, modify the Einstein equations, introduce extra dimensions, or assume supersymmetry. Instead, it asks: what *must* the quantum-gravitational framework look like if it is required to satisfy the same closure admissibility principle that governs measurement, probability, and particle content?
 
-The answer is a canonical, background-covariant spectral coupling that satisfies every structural requirement simultaneously — and is mathematically complete in the constructive QFT sense.
+The answer is a canonical, background-covariant spectral coupling that satisfies every structural requirement simultaneously and is mathematically complete in the constructive QFT sense.
 
 ---
 
@@ -48,7 +48,7 @@ Understanding why the Tier-0 approach works requires understanding precisely why
 
 **Perturbative quantum gravity** treats the metric as $g_{\mu\nu} = \eta_{\mu\nu} + h_{\mu\nu}$ and quantises the perturbation $h_{\mu\nu}$ as a spin-2 field. The resulting theory is non-renormalisable: at each loop order, new divergent counterterms appear that are not present in the original Lagrangian. No finite set of parameters can absorb all the infinities. The theory is predictive only as a low-energy effective field theory, not as a fundamental framework.
 
-**Higher-curvature gravity** adds terms like $R^2$ and $R_{\mu\nu}R^{\mu\nu}$ to the action, which can improve renormalisability. But these higher-derivative theories generically introduce ghost modes — propagating degrees of freedom with negative kinetic energy — that render the vacuum unstable.
+**Higher-curvature gravity** adds terms like $R^2$ and $R_{\mu\nu}R^{\mu\nu}$ to the action, which can improve renormalisability. But these higher-derivative theories generically introduce ghost modes propagating degrees of freedom with negative kinetic energy that render the vacuum unstable.
 
 **String theory** achieves UV finiteness by replacing point particles with extended objects, but requires extra dimensions, supersymmetry, and a landscape of $10^{500}$ vacua that makes prediction effectively impossible without additional selection principles.
 
@@ -58,15 +58,15 @@ Understanding why the Tier-0 approach works requires understanding precisely why
 
 The common thread: every approach either modifies the equations (and loses contact with established physics), introduces speculative structure (extra dimensions, supersymmetric partners, discretised geometry), or fails to produce a self-consistent framework that simultaneously reproduces general relativity *and* quantum field theory in the appropriate limits.
 
-The Tier-0 framework addresses all of these failures at once — not by choosing a particular quantisation scheme, but by deriving the structural conditions that any consistent quantum-gravitational theory must satisfy.
+The Tier-0 framework addresses all of these failures at once, not by choosing a particular quantisation scheme, but by deriving the structural conditions that any consistent quantum-gravitational theory must satisfy.
 
 ---
 
 ## 3. A Unified Spectral Framework for Quantum Gravity
 
-The centrepiece of the quantum gravity programme is a mathematically rigorous spectral construction that achieves what the field calls *global unconditional closure* — a precise technical definition meaning:
+The centrepiece of the quantum gravity programme is a mathematically rigorous spectral construction that achieves what the field calls global unconditional closure, a precise technical definition meaning:
 
-1. The spectral bridge $\mathfrak{B}_{\mathrm{QG}}$ is **canonical** — independent of all auxiliary choices (Wick rotation path, strip parameter, smoothing window).
+1. The spectral bridge $\mathfrak{B}_{\mathrm{QG}}$ is **canonical** - independent of all auxiliary choices (Wick rotation path, strip parameter, smoothing window).
 2. The Euclidean theory with covariance $Q^{-1}$ for $Q = D_{g_E} + \mathfrak{B}_{\mathrm{QG}}$ satisfies **Osterwalder-Schrader positivity**, guaranteeing that a physical Wightman theory with a self-adjoint, semibounded Hamiltonian can be reconstructed.
 3. The coupled Einstein-spectral system enjoys **small-data global existence and uniqueness** in generalised harmonic gauge.
 4. There exist **falsifiable observables** with certified, outward-rounded intervals derived from geometric heat-kernel and zeta-function data.
@@ -77,7 +77,7 @@ No other approach to quantum gravity simultaneously achieves all four of these c
 
 ## 4. The Canonical Spectral Bridge
 
-The construction begins on an oriented, time-oriented, globally hyperbolic spin $4$-manifold $(\mathcal{M}, g)$ of bounded geometry and its Euclideanisation $(\mathcal{M}, g_E)$. Let $D_{g_E}$ denote the Euclidean Dirac operator — essentially self-adjoint under completeness and bounded geometry.
+The construction begins on an oriented, time-oriented, globally hyperbolic spin $4$-manifold $(\mathcal{M}, g)$ of bounded geometry and its Euclideanisation $(\mathcal{M}, g_E)$. Let $D_{g_E}$ denote the Euclidean Dirac operator, essentially self-adjoint under completeness and bounded geometry.
 
 The spectral bridge is constructed from a holomorphic Fredholm determinant. Fix a compactly localised cutoff $\chi \in C_c^\infty(\mathcal{M})$ and define the regularised operator:
 
@@ -87,7 +87,7 @@ $$
 
 for $\operatorname{Re}\lambda \geq \sigma_* \gg 1$. This is holomorphic in $\lambda$ with values in the Hilbert-Schmidt class $\mathfrak{S}_2$, with operator norm strictly less than one in the relevant half-plane.
 
-From this, define the regularised Fredholm determinant $\Delta(\lambda) := \det_2(I - \widehat{B}(\lambda))$ and the **boundary slope**:
+From this, define the regularised Fredholm determinant $\Delta(\lambda) := \det_2(I - \widehat{B}(\lambda))$ and the boundary slope:
 
 $$
 s_\sigma(t) := \partial_t,\operatorname{Im}\log\Delta(\sigma + it)
@@ -99,7 +99,7 @@ $$
 \mathfrak{B}*{\mathrm{QG}}(g_E) := F*\sigma(|D_{g_E}|) + \sum_k \alpha_k,\Pi_{{\xi_k}}(|D_{g_E}|)
 $$
 
-where $F_\sigma$ is the Herglotz transform of the Fejér-smoothed boundary slope, $\Pi_{{\xi_k}}$ are spectral projectors of $|D|$ at atomic spectral points, and the coefficients $\alpha_k = \frac{32}{3}m_k$ are canonically determined by the symmetric atomic masses $m_k$ — with no empirical fitting.
+where $F_\sigma$ is the Herglotz transform of the Fejér-smoothed boundary slope, $\Pi_{{\xi_k}}$ are spectral projectors of $|D|$ at atomic spectral points, and the coefficients $\alpha_k = \frac{32}{3}m_k$ are canonically determined by the symmetric atomic masses $m_k$ - with no empirical fitting.
 
 Three independence results establish canonicity:
 
@@ -115,7 +115,7 @@ The bridge is therefore background-covariant and free of all auxiliary choices. 
 
 ## 5. The Fejér–Hardy Constant: A Universal Normalisation
 
-At the heart of the spectral framework lies a universal constant derived by explicit Fourier analysis — not assumed, not fitted, not adjusted.
+At the heart of the spectral framework lies a universal constant derived by explicit Fourier analysis not assumed, not fitted, not adjusted.
 
 Let $P_T(t) = \frac{1}{2\pi T}\left(\frac{\sin(Tt/2)}{t/2}\right)^2$ be the Fejér kernel with $\kappa_T = P_T(0) = T/(2\pi)$, and let $W_T$ be a three-window, moment-solved cosine packet. Then for any even $s \in BV_{\mathrm{loc}}(\mathbb{R})$:
 
@@ -135,7 +135,7 @@ A deep structural connection emerges: the same scalar $32\pi/3$ appears independ
 
 ## 6. Osterwalder-Schrader Positivity: The Constructive QFT Core
 
-Osterwalder-Schrader (OS) positivity is the gold standard for constructive quantum field theory. If a Euclidean theory satisfies OS positivity, it admits analytic continuation to a physical Minkowski-signature theory with a self-adjoint, semibounded Hamiltonian and a positive-definite Hilbert space. This is the *reconstruction theorem* — the mathematical bridge between Euclidean path integrals and physical quantum mechanics.
+Osterwalder-Schrader (OS) positivity is the gold standard for constructive quantum field theory. If a Euclidean theory satisfies OS positivity, it admits analytic continuation to a physical Minkowski-signature theory with a self-adjoint, semibounded Hamiltonian and a positive-definite Hilbert space. This is the *reconstruction theorem* - the mathematical bridge between Euclidean path integrals and physical quantum mechanics.
 
 The spectral framework proves OS positivity for the bounded perturbation $Q = D_{g_E} + \mathfrak{B}_{\mathrm{QG}}(g_E)$ through half-space factorisation.
 
@@ -153,7 +153,7 @@ $$
 
 since $K \geq 0$ and $e^{-uK}$ is a contraction semigroup. Self-adjointness of $Q$ follows from Kato-Rellich because $\mathfrak{B}_{\mathrm{QG}}$ is bounded.
 
-The consequence: OS reconstruction yields a Wightman theory with a self-adjoint, semibounded Hamiltonian. The spectral framework produces a *physically realisable* quantum field theory on curved spacetime — not merely a formal expression, but a constructively valid quantum theory in the rigorous mathematical sense.
+The consequence: OS reconstruction yields a Wightman theory with a self-adjoint, semibounded Hamiltonian. The spectral framework produces a *physically realisable* quantum field theory on curved spacetime, not merely a formal expression, but a constructively valid quantum theory in the rigorous mathematical sense.
 
 ---
 
@@ -169,7 +169,7 @@ $$
 |F_{\mathrm{spec}}(u)(t)|*{H^{s-1}*\delta} \leq C|\mathfrak{B}*{\mathrm{QG}}|*{\mathrm{op}}|u(t)|*{H^s*\delta}
 $$
 
-Because $\mathfrak{B}_{\mathrm{QG}}$ is *bounded* — a consequence of the spectral functional calculus — the coupling enters as a zero-order perturbation that does not change the principal symbol of the wave system. Standard GH energy estimates and Klainerman-Sobolev decay yield global control:
+Because $\mathfrak{B}_{\mathrm{QG}}$ is bounded, a consequence of the spectral functional calculus, the coupling enters as a zero-order perturbation that does not change the principal symbol of the wave system. Standard GH energy estimates and Klainerman-Sobolev decay yield global control:
 
 $$
 \frac{d}{dt}\mathcal{E}*s(t) \leq -c,\langle t\rangle^{-1-\eta}\mathcal{E}*s(t) + C|\mathfrak{B}*{\mathrm{QG}}|*{\mathrm{op}}\mathcal{E}_s(t)
@@ -177,13 +177,13 @@ $$
 
 For sufficiently small initial data, the bounded coupling term is absorbed by the integrable decay weight, and Grönwall's inequality gives global existence with decay $\mathcal{E}_s(t) \lesssim \mathcal{E}_s(0)\langle t\rangle^{-\eta}$.
 
-This is a *global* result — not merely perturbative or local-in-time. The spectral channel does not destabilise the Einstein dynamics. Gravity and quantum structure coexist in a mathematically well-posed coupled system.
+This is a global result not merely perturbative or local-in-time. The spectral channel does not destabilise the Einstein dynamics. Gravity and quantum structure coexist in a mathematically well-posed coupled system.
 
 ---
 
 ## 8. The Structural Unification of QFT and General Relativity
 
-Beyond the spectral framework, the programme establishes a complete dynamical unification through a single scalar structural mediator $\chi$ — interpreted as the local deviation from the Tier-$\Omega$ monadic fixed point.
+Beyond the spectral framework, the programme establishes a complete dynamical unification through a single scalar structural mediator $\chi$ - interpreted as the local deviation from the Tier-$\Omega$ monadic fixed point.
 
 The unified action is:
 
@@ -195,9 +195,9 @@ Every term is fixed by dimensional analysis and structural necessity. No higher-
 
 **Exact classical limits.** Setting $\chi \to 0$ recovers pure Einstein gravity ($G_{\mu\nu} = 0$). Setting $g_{\mu\nu} \to \eta_{\mu\nu}$ recovers flat-space QFT with the Standard Model Lagrangian. Both limits are exact, with no residue terms.
 
-**Vanishing cosmological constant.** The effective cosmological constant vanishes identically at the physical vacuum $\chi_0 = 0$. An exact bidual spectral projection forbids vacuum counterterms in the renormalised effective action, enforcing $\Lambda_{\mathrm{eff}} = 0$ to all orders in perturbation theory as a *derived structural invariant* — not a fine-tuning condition.
+**Vanishing cosmological constant.** The effective cosmological constant vanishes identically at the physical vacuum $\chi_0 = 0$. An exact bidual spectral projection forbids vacuum counterterms in the renormalised effective action, enforcing $\Lambda_{\mathrm{eff}} = 0$ to all orders in perturbation theory as a *derived structural invariant* - not a fine-tuning condition.
 
-**Born-rule rigidity in curved backgrounds.** The $L^2$ Hilbert-Schmidt geometry is the unique renormalisation-stable probability metric. Non-quadratic probability laws are dynamically excluded under the flow. The Born rule does not merely survive quantisation on curved spacetime — it is the *only* probability structure that can.
+**Born-rule rigidity in curved backgrounds.** The $L^2$ Hilbert-Schmidt geometry is the unique renormalisation-stable probability metric. Non-quadratic probability laws are dynamically excluded under the flow. The Born rule does not merely survive quantisation on curved spacetime, it's the only probability structure that can.
 
 **Yang-Mills mass gap preservation.** The non-Abelian gauge sector reduces exactly to ordinary four-dimensional Yang-Mills theory at the fixed point, and the unconditional spectral mass gap is preserved under full coupling to the $\chi$ sector, ensuring infrared confinement stability.
 
@@ -213,7 +213,7 @@ In essentially all standard formulations of physics, the number of spatial dimen
 
 The Tier-0 framework takes a different stance: **dimensionality is not assumed; it is selected as the unique closure-stable residue of a recursive admissibility procedure**.
 
-The construction begins from *pre-dimensional spectral data* $(\mathcal{A}, \mathcal{H}, D)$ — a noncommutative operator algebra acting on a separable Hilbert space with an unfixed generator $D$. No ambient dimension is assumed. The usual spectral-triple axioms (compact resolvent, bounded commutators, regularity) are treated as *possible outcomes* of the recursion, not inputs.
+The construction begins from *pre-dimensional spectral data* $(\mathcal{A}, \mathcal{H}, D)$ - a noncommutative operator algebra acting on a separable Hilbert space with an unfixed generator $D$. No ambient dimension is assumed. The usual spectral-triple axioms (compact resolvent, bounded commutators, regularity) are treated as *possible outcomes* of the recursion, not inputs.
 
 The central mechanism is **recursive gauge collapse**. Define a noncommutativity defect energy:
 
@@ -227,29 +227,29 @@ $$
 \mathcal{E}*{\ell+1} \leq \mathcal{E}*\ell - c_d,\mathcal{E}_\ell^{1+\alpha}, \qquad \alpha > 0
 $$
 
-where $c_d$ is a dimensional coercivity constant. **Dimension** is then defined as the minimal integer $d$ for which a commutator-Sobolev coercivity certificate $|[D,f]| \gtrsim |f|_{H^1_d}$ persists under the full $\partial\Delta\Omega$ recursion.
+where $c_d$ is a dimensional coercivity constant. Dimension is then defined as the minimal integer $d$ for which a commutator-Sobolev coercivity certificate $|[D,f]| \gtrsim |f|_{H^1_d}$ persists under the full $\partial\Delta\Omega$ recursion.
 
-The result: the only closure-stable configuration supporting both a three-generator commuting spatial derivation module *and* a fourth derivation inducing irreversible scaling is a $(3+1)$-type fixed point. **Time** emerges as the monotone recursion-depth coordinate required to reach stabilisation:
+The result: the only closure-stable configuration supporting both a three-generator commuting spatial derivation module *and* a fourth derivation inducing irreversible scaling is a $(3+1)$-type fixed point. Time emerges as the monotone recursion-depth coordinate required to reach stabilisation:
 
 $$
 t_L := \min{n \in \mathbb{N} : (\partial\Delta\Omega)^n(L) = (\partial\Delta\Omega)^{n+1}(L)}
 $$
 
-Time is not a primitive parameter. It is a closure residue — the index of how many admissibility layers are needed for stabilisation. The arrow of time, the distinction between spatial and temporal directions, and the number of each are all *derived* from the same recursive structure.
+Time is not a primitive parameter. It is a closure residue, the index of how many admissibility layers are needed for stabilisation. The arrow of time, the distinction between spatial and temporal directions, and the number of each are all *derived* from the same recursive structure.
 
 ---
 
 ## 10. Light, Time, and the Null Structure of Causality
 
-The speed of light $c$ is typically presented as a kinematic fact of relativistic spacetime — the invariant speed limit built into the metric. The Tier-0 framework reveals it as something deeper: a **closure invariant of causal structure**.
+The speed of light $c$ is typically presented as a kinematic fact of relativistic spacetime, the invariant speed limit built into the metric. The Tier-0 framework reveals it as something deeper: a **closure invariant of causal structure**.
 
 The analysis makes a sharp distinction between null and timelike sectors:
 
-**Null structure (light, gravitational radiation)** is characterised by the absence of proper time. Null trajectories carry no internal clock, accumulate no records, and support no dissipative evolution. They are $\Omega$-closed and invariant — fixed points of the admissibility recursion with respect to temporal collapse. Light is not fundamentally a "time-evolving thing with a velocity" but the observable activation of spacetime's null relational structure under electromagnetic coupling.
+**Null structure (light, gravitational radiation)** is characterised by the absence of proper time. Null trajectories carry no internal clock, accumulate no records, and support no dissipative evolution. They are $\Omega$-closed and invariant fixed points of the admissibility recursion with respect to temporal collapse. Light is not fundamentally a "time-evolving thing with a velocity" but the observable activation of spacetime's null relational structure under electromagnetic coupling.
 
 **Timelike structure (massive matter, observers)** necessarily acquires operational time through $\Delta$-mediated irreversibility and record formation. Proper time is inseparable from collapse-bearing, record-forming dynamics.
 
-The constant $c$ therefore does not describe the speed of a signal through a medium. It describes the **boundary** between structures that can form records (and therefore experience time) and structures that cannot. This boundary is fixed by closure — it is the same for electromagnetic radiation and gravitational radiation because both occupy the null sector, not because of a dynamical coincidence.
+The constant $c$ therefore does not describe the speed of a signal through a medium. It describes the boundary between structures that can form records (and therefore experience time) and structures that cannot. This boundary is fixed by closure, it's the same for electromagnetic radiation and gravitational radiation because both occupy the null sector, not because of a dynamical coincidence.
 
 The result: the invariance of $c$, the vanishing of photon proper time, and the coincidence of light-speed and gravity-speed propagation are all structural consequences of the same admissibility principle — not independent postulates.
 
@@ -261,19 +261,19 @@ With the spectral framework, the structural unification, and the null/timelike c
 
 Gravity is not a propagating substance analogous to light. It is an **$\Omega$-stable closure geometry** whose manifestations differ by sector:
 
-**Gravitational waves** are null, coherence-dominated excitations constrained to the causal boundary. They propagate at $c$ because they occupy the same null sector as light — record-silent during transit, carrying phase and correlation without proper-time accumulation.
+**Gravitational waves** are null, coherence-dominated excitations constrained to the causal boundary. They propagate at $c$ because they occupy the same null sector as light record-silent during transit, carrying phase and correlation without proper-time accumulation.
 
-**Static and dynamical gravity** (free fall, orbital mechanics, cosmological structure) arise from $\Delta$-mediated curvature persistence sourced by record-bearing matter in the $\Lambda$-sector. The equivalence principle — the universality of free fall — is a *sector consequence* of motion in closure geometry. If gravity is not mediated by a charge-carrying field but realised as $\Omega$-stable closure geometry organising admissible worldlines, then trajectories cannot depend on the microphysical details selected by $\Delta$.
+**Static and dynamical gravity** (free fall, orbital mechanics, cosmological structure) arise from $\Delta$-mediated curvature persistence sourced by record-bearing matter in the $\Lambda$-sector. The equivalence principle, the universality of free fall is a sector consequence of motion in closure geometry. If gravity is not mediated by a charge-carrying field but realised as $\Omega$-stable closure geometry organising admissible worldlines, then trajectories cannot depend on the microphysical details selected by $\Delta$.
 
-**Quantum gravity** is the problem of consistent record formation on a curvature background that is itself $\Omega$-closed and partially record-silent. The apparent divide between classical geometry and quantum behaviour arises from **sector misclassification** — treating gravity as if it were a local, record-bearing field of the same type as matter. The correct quantum completion is spectral: governed by admissible operator constraints (semiboundedness, positivity, stability under coarse-graining) rather than by a naïve graviton gas.
+**Quantum gravity** is the problem of consistent record formation on a curvature background that is itself $\Omega$-closed and partially record-silent. The apparent divide between classical geometry and quantum behaviour arises from sector misclassification, treating gravity as if it were a local, record-bearing field of the same type as matter. The correct quantum completion is spectral: governed by admissible operator constraints (semiboundedness, positivity, stability under coarse-graining) rather than by a naïve graviton gas.
 
-This classification explains why gravitational quantisation is *difficult*: gravity occupies a partially record-silent role, structuring causal relations and persistence without itself generically instantiating localisable, dissipative records. The spectral framework provides exactly the right type of completion — one that respects the closure character of gravity rather than forcing it into a matter-like mould.
+This classification explains why gravitational quantisation is *difficult*: gravity occupies a partially record-silent role, structuring causal relations and persistence without itself generically instantiating localisable, dissipative records. The spectral framework provides exactly the right type of completion, one that respects the closure character of gravity rather than forcing it into a matter-like mould.
 
 ---
 
 ## 12. Falsifiable Observables and Certified Predictions
 
-The framework is not merely mathematically complete — it is empirically testable.
+The framework is not merely mathematically complete - it is empirically testable.
 
 Three falsifiable observables are defined as certified linear functionals of Seeley-DeWitt heat-kernel coefficients:
 
@@ -281,11 +281,11 @@ $$
 \mathcal{B}*{\mathrm{obs}} = L_B[a_0, a_2, a_4], \qquad \mathcal{G}*{\mathrm{obs}} = L_G[a_0, a_2, a_4], \qquad \mathcal{E}_{\mathrm{obs}} = L_E[a_0, a_2, a_4]
 $$
 
-where $L_\bullet$ are explicit rational combinations of the Seeley-DeWitt coefficients and the Fejér normalisation constant. Using outward rounding, each observable yields a certified numerical interval — not a point prediction, but a bounded range within which the physical value must lie if the framework is correct.
+where $L_\bullet$ are explicit rational combinations of the Seeley-DeWitt coefficients and the Fejér normalisation constant. Using outward rounding, each observable yields a certified numerical interval not a point prediction, but a bounded range within which the physical value must lie if the framework is correct.
 
 The recipe is deterministic, reproducible, and falsifiable: an empirical value falling outside the certified interval would refute the framework.
 
-Additionally, the recursive gauge collapse mechanism predicts a specific non-Kolmogorov dissipation anomaly — a spectral tail with exponent $\alpha > 5/3$ in appropriate high-coherence regimes — providing an independent falsification channel.
+Additionally, the recursive gauge collapse mechanism predicts a specific non-Kolmogorov dissipation anomaly, a spectral tail with exponent $\alpha > 5/3$ in appropriate high-coherence regimes providing an independent falsification channel.
 
 ---
 
@@ -293,9 +293,9 @@ Additionally, the recursive gauge collapse mechanism predicts a specific non-Kol
 
 The programme extends beyond the quantum-gravitational dynamics to address the structural limits of observation itself.
 
-**$\Upsilon$-collapse** is a Class VI law-level phenomenon — distinct from quantum measurement ($\Delta$-collapse) — in which globally entangled closure structures resolve into a single admissible equivalence class. It is characterised as a *topological equivalence recognition event*: collapse occurs precisely when the global closure lattice admits a unique $\Upsilon$-consistent equivalence class under $\Omega\Delta\partial$, and persistent superposition corresponds to the absence of such uniqueness.
+**$\Upsilon$-collapse** is a Class VI law-level phenomenon distinct from quantum measurement ($\Delta$-collapse) in which globally entangled closure structures resolve into a single admissible equivalence class. It is characterised as a *topological equivalence recognition event*: collapse occurs precisely when the global closure lattice admits a unique $\Upsilon$-consistent equivalence class under $\Omega\Delta\partial$, and persistent superposition corresponds to the absence of such uniqueness.
 
-This explains non-local memory coherence, identity persistence across time, and the structural limits on observer absoluteness established by recent no-go theorems (timelike friendliness results). Apparent paradoxes in quantum observer scenarios correspond to **inadmissible $\Psi$-paths** — attempted reindexings of perspective that exceed admissible kinetic bounds or violate global equivalence constraints — rather than physical inconsistencies.
+This explains non-local memory coherence, identity persistence across time, and the structural limits on observer absoluteness established by recent no-go theorems (timelike friendliness results). Apparent paradoxes in quantum observer scenarios correspond to **inadmissible $\Psi$-paths** attempted reindexings of perspective that exceed admissible kinetic bounds or violate global equivalence constraints rather than physical inconsistencies.
 
 The Observer-Locus Instability Problem is resolved by **$\Psi$-admissibility conditions** governing allowed observer shifts, forbidden locus paths, and instability thresholds. Observer freedom is real but not arbitrary. Paradox is excluded by law-level constraints rather than by interpretive fiat.
 
@@ -305,7 +305,7 @@ The Observer-Locus Instability Problem is resolved by **$\Psi$-admissibility con
 
 The framework generates results in domains that might seem unexpected for a quantum gravity programme:
 
-**Momentum-conserving warp bubbles.** The closure framework provides a conservation-consistent treatment of warp-bubble spacetimes with distributional geometry and generalised junction conditions. A control-volume momentum theorem proves that warp-bubble acceleration is possible *only* through boundary momentum flux — reactionless propulsion is excluded by construction. Feasibility is reduced to three independent quantitative constraint families, making both success and failure sharply decidable.
+**Momentum-conserving warp bubbles.** The closure framework provides a conservation-consistent treatment of warp-bubble spacetimes with distributional geometry and generalised junction conditions. A control-volume momentum theorem proves that warp-bubble acceleration is possible *only* through boundary momentum flux reactionless propulsion is excluded by construction. Feasibility is reduced to three independent quantitative constraint families, making both success and failure sharply decidable.
 
 **q-desic admissibility.** The quantum-gravitational generalisation of classical geodesic motion (Koch-Riahinia-Rincón q-desics) receives a systematic admissibility classification. Without modifying the q-desic equations, explicit admissibility criteria partition the state space into admissible, inadmissible, and marginal classes, clarifying which quantum-gravitational corrections to geodesic motion are physically meaningful.
 
@@ -317,7 +317,7 @@ The framework generates results in domains that might seem unexpected for a quan
 
 ### Quantum gravity has a constructively valid solution
 
-The spectral framework satisfies every requirement for mathematical completeness in the constructive QFT sense: canonical independence, OS positivity, small-data global closure, and falsifiable observables with certified intervals. This is not a conjecture or a programme — it is a proven result.
+The spectral framework satisfies every requirement for mathematical completeness in the constructive QFT sense: canonical independence, OS positivity, small-data global closure, and falsifiable observables with certified intervals. This is not a conjecture or a programme, it is a proven result.
 
 ### The cosmological constant problem is resolved
 
